<resources>
    <string name="app_name">Yemilicious Pot</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create An <br />Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="name_required">First Name is required!</string>
    <string name="phone_number_required">Phone Number is required!</string>
    <string name="email_address_required">Email address is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="password_length">Password must be greater than %1$d</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="password_retype_required">Password Retype is required!</string>
    <string name="login_error">Invalid Credentials. Please try again!</string>
    <string name="title_activity_setup">Setup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="finish">Finish</string>
    <string name="fill_in_the_information_below_to_complete_setup">Fill in the information below to complete setup</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_name">Shop Name</string>
    <string name="one_more_step">One more step…</string>
    <string name="login_to_continue">Please login to continue…</string>
    <string name="select_role">Select Role</string>
    <string name="home_address">Home Address</string>
    <string name="profile_update_success">User profile updated successfully!</string>
    <string name="shop_update_success">Shop updated successfully!</string>
    <string name="title_activity_seller_dashboard">Seller\'s Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_seller_food_added">No Food Added Yet. <br /> Click the <b>\"+\"</b> button above to add food to your restaurant</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="no_order_yet">No Order Yet</string>
    <string name="upload_image">Upload Image</string>
    <string name="food_name">Food Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="image_of_food">Image of the food</string>
    <string name="save">Save</string>
    <string name="add_food">Add Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="food_name_required">Food name is required!</string>
    <string name="food_price_required">Food price is required!</string>
    <string name="food_desc_required">Food description is required!</string>
    <string name="food_image_required">Food Image is required!</string>
    <string name="invalid_food_price">Invalid food price</string>
    <string name="food_price_naira">&#8358;%1$s</string>
    <string name="logout">Logout</string>
    <string name="title_activity_buyers_dashboard">Choose A Restaurant To Buy Food…</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="order_food">Order Food</string>
    <string name="choose_a_restaurant_to_buy_food">Choose A Restaurant To Buy Food</string>
    <string name="select_food_make_order">Select A Meal To Make An Order</string>
    <string name="order_completed_success">Order completed successfully!</string>
    <string name="view_food">View Food</string>
    <string name="order_summary">Order Summary</string>
    <string name="ok">OK</string>
    <string name="my_orders">My Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel">Cancel</string>
    <string name="order_cancelled_success">Order cancelled successfully!</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="delivered">delivered</string>
    <string name="order_customer_name"><b>Customer Name:</b> %1$s</string>
    <string name="order_customer_address"><b>Address:</b> %1$s</string>
    <string name="order_customer_phone"><b>Phone Number:</b> %1$s</string>
    <string name="order_status_updated_success">Order status updated successfully!</string>
    <string name="no_foods_available">Sorry, but there are no foods available in this restaurant.
        <br />You can try another one!</string>
</resources>