<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/bungee"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:translationX="10dp"
            android:translationY="-10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cooking_pot" />

        <EditText
            android:id="@+id/regName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/regName"
            app:layout_constraintStart_toStartOf="@+id/regName"
            app:layout_constraintTop_toBottomOf="@+id/regName" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@+id/regEmail"
            app:layout_constraintStart_toStartOf="@+id/regEmail"
            app:layout_constraintTop_toBottomOf="@+id/regEmail" />

        <EditText
            android:id="@+id/regPasswordConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/retype_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@+id/regPassword"
            app:layout_constraintStart_toStartOf="@+id/regPassword"
            app:layout_constraintTop_toBottomOf="@+id/regPassword" />

        <Button
            android:id="@+id/regRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/ic_arrow_right_alt_24px"
            android:paddingStart="18dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="8dp"
            android:text="@string/register"
            android:textColor="@color/icons"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/primary_dark"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/regPasswordConfirm"
            app:layout_constraintStart_toStartOf="@+id/regPasswordConfirm"
            app:layout_constraintTop_toBottomOf="@+id/regPasswordConfirm" />

        <ProgressBar
            android:id="@+id/regLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/regPassword"
            app:layout_constraintStart_toStartOf="@+id/regPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/already_have_an_account"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/regLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regRegister" />

        <Button
            android:id="@+id/regLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/didact_gothic"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>