<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoleSetupFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/setup_background"
        app:tint="#4D000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tintMode="src_over" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/bungee"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/what_would_you_like_to_do"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:drawableEnd="@drawable/ic_arrow_right_alt_24px"
        android:enabled="false"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:text="@string/next"
        android:textColor="@color/icons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary_dark"
        app:cornerRadius="30dp"
        app:iconPadding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:contentPadding="15dp"
        tools:backgroundTint="@color/primary_light"
        app:layout_constraintBottom_toTopOf="@+id/btnSell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_buying" />

            <TextView
                android:id="@+id/textView_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center_horizontal"
                android:text="@string/buy"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/btnBuy"
        app:layout_constraintStart_toStartOf="@+id/btnBuy"
        app:layout_constraintTop_toBottomOf="@+id/btnBuy"
        app:layout_constraintVertical_chainStyle="spread">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_cook" />

            <TextView
                android:id="@+id/textView_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center_horizontal"
                android:text="@string/sell"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>